--- a/intellij-projects/coverage-ai/settings.gradle
+++ b/intellij-projects/coverage-ai/settings.gradle
@@ -1,2 +1,2 @@
-rootProject.name = 'gradle-coverage-ai'
-include 'cover-agent-plugin'
+rootProject.name = 'coverage-ai'
+include 'coverage-ai-plugin'
