--- a/.github/workflows/coverage-gradle.yml
+++ b/.github/workflows/coverage-gradle.yml
@@ -7,12 +7,11 @@ on:
   pull_request:
     branches:
       - main
+    paths: coverage-ai/*
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    directory: cover-agent/* # This is the directory where the gradle project is located
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
