--- a/.github/workflows/coverage-gradle.yml
+++ b/.github/workflows/coverage-gradle.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
     branches:
       - main
-    paths: ./intellij-projects/coverage-ai/*
+    paths:
+      - "intellij-projects/coverage-ai/**"
 
 jobs:
   build:
