--- a/.github/workflows/coverage-gradle.yml
+++ b/.github/workflows/coverage-gradle.yml
@@ -33,7 +33,9 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle-
 
       - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        run: |
+          cd intellij-projects/coverage-ai/
+          chmod +x gradlew
 
       - name: Build and Test Cover Agent Plugin
         working-directory: coverage-ai-plugin
