--- a/intellij-projects/java-spring-refactor/src/main/resources/application.properties
+++ b/intellij-projects/java-spring-refactor/src/main/resources/application.properties
@@ -1,11 +1,70 @@
-server.port=8585
-# H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+# Spring Boot Application Configuration for KhulnaSoft User Management Service
+
+# Application Information
+spring.application.name=KhulnaSoft User Management API
+spring.application.version=1.0.0
+spring.application.description=API for managing users in the KhulnaSoft DevLabs ecosystem
+
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/api/v1
+
+# Database Configuration (H2 for demo)
+spring.datasource.url=jdbc:h2:mem:userdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# H2 Console Configuration (optional, for accessing H2 console)
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+
+# H2 Console (for development)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Logging Configuration
+logging.level.com.khulnasoft.refactor=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Jackson Configuration
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.time-zone=UTC
+
+# Management/Actuator Endpoints
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.metrics.export.prometheus.enabled=true
+
+# OpenAPI/Swagger Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.try-it-out-enabled=true
+springdoc.swagger-ui.filter=true
+
+# Custom Properties for User Management
+app.user.default-role=USER
+app.user.password.min-length=8
+app.user.session.timeout=3600
+
+# Validation Configuration
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+# Async Configuration
+spring.task.execution.pool.core-size=8
+spring.task.execution.pool.max-size=16
+spring.task.execution.pool.queue-capacity=100
+spring.task.execution.thread-name-prefix=user-service-
+
+# Security (placeholder for future implementation)
+app.security.jwt.secret=mySecretKey
+app.security.jwt.expiration=86400
