--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,493 @@
+# Operating System Files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*~
+
+# Build and Dependency Directories
+.gradle/
+build/
+out/
+target/
+bin/
+obj/
+
+# Gradle Wrapper (centralized in gradle/ directory)
+**/gradle/wrapper/
+**/gradlew
+**/gradlew.bat
+
+# Maven
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# IDE Files
+.idea/
+*.iml
+*.ipr
+*.iws
+.vscode/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs/
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+.nyc_output
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons (https://nodejs.org/api/addons.html)
+build/Release
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# TypeScript v1 declaration files
+typings/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+.env.production
+.env.local
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+hs_err_pid*
+
+# Kotlin
+*.kt.bak
+
+# Groovy
+*.groovy.bak
+
+# Application specific
+!**/src/main/resources/application.yml
+!**/src/main/resources/application.properties
+!**/src/test/resources/application.yml
+!**/src/test/resources/application.properties
+application.yml
+application.properties
+application-dev.yml
+application-prod.yml
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Docker
+.dockerignore
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Lock files (keep package-lock.json but ignore others)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Local environment files
+!**/src/main/resources/application-local.yml
+!**/src/main/resources/application-local.properties
+!**/src/test/resources/application-local.yml
+!**/src/test/resources/application-local.properties
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
+test-results/
+test-output/
+junitreports/
+surefire-reports/
+failsafe-reports/
+
+# Reports
+target/site/jacoco/
+target/site/jacoco-aggregate/
+*.exec
+
+# Spring Boot
+spring.log
+
+# Gradle Daemon
+.gradle/
+
+# Build cache
+.cache/
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Eclipse
+.project
+.classpath
+.settings/
+bin/
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode/
+*.code-workspace
+
+# Sublime Text
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+
+# Vim
+[._]*.s[a-v][a-z]
+!*.svg
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+Session.vim
+.netrwhist
+*~
+tags
+[._]*.un~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# SublimeText
+*.tmlanguage.cache
+*.tmPreferences.cache
+*.stTheme.cache
+*.sublime-workspace
+*.sublime-project
+
+# VSCode
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Atom
+.atom/
+
+# Local History for Visual Studio
+.localhistory/
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+
+# Linux
+*~
+
+# JetBrains IDEs
+.idea/
+
+# Gradle
+.gradle/
+build/
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Docker
+.docker/
+
+# Temporary files
+*.tmp
+*.bak
+*.orig
+
+# Logs
+*.log
+logs/
+
+# Application specific
+!**/src/main/resources/application-local.yml
+!**/src/main/resources/application-local.properties
+!**/src/test/resources/application-local.yml
+!**/src/test/resources/application-local.properties
+application-local.yml
+application-local.properties
+
+# Security sensitive files
+*.key
+*.pem
+*.p12
+*.jks
+
+# Documentation build
+docs/build/
+docs/.doctrees/
+
+# Coverage reports
+coverage/
+*.lcov
+
+# Performance test results
+performance-results/
+
+# API documentation
+api-docs/
+
+# Generated files
+generated/
+generated-sources/
+generated-test-sources/
+
+# Test reports
+target/surefire-reports/
+target/failsafe-reports/
+target/site/jacoco/
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Eclipse
+.project
+.classpath
+.settings/
+bin/
+
+# NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# Temporary Files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+# Backup Files
+*.bak
+*.backup
+*.orig
+*.rej
+
+# Lock Files
+*.lock
+yarn.lock
+package-lock.json
+
+# Gradle Daemon
+.gradle/
+
+# Build Output
+build/
+out/
+target/
+
+# IDE Specific
+.idea/
+*.iml
+*.ipr
+*.iws
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS Specific
+.DS_Store
+Thumbs.db
+
+# Application Specific
+!**/src/main/resources/application*.yml
+!**/src/main/resources/application*.properties
+!**/src/test/resources/application*.yml
+!**/src/test/resources/application*.properties
+application*.yml
+application*.properties
+
+# Logs
+*.log
+logs/
+
+# Database
+*.db
+*.sqlite
+
+# Generated Documentation
+docs/build/
+site/
+
+# Temporary
+tmp/
+temp/
+
+# Security
+*.key
+*.pem
+*.jks
+
+# Coverage
+coverage/
+*.exec
+
+# Test Results
+test-results/
+test-output/
+
+# Performance
+performance-results/
+
+# API
+api-docs/
+
+# Generated
+generated/
+generated-sources/
