--- a/intellij-projects/coverage-ai/build.gradle
+++ b/intellij-projects/coverage-ai/build.gradle
@@ -1,12 +1,16 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id 'com.gradle.plugin-publish' version '1.3.0'
+    id 'maven-publish'
+    id 'signing'
 }
 
 group = 'com.khulnasoft'
-version = '0.0.1'
+version = '0.0.2'
 
 repositories {
+    gradlePluginPortal()
     mavenCentral()
 }
 
@@ -21,12 +25,49 @@ test {
     finalizedBy jacocoTestReport
 }
 
-
-
 check {
     dependsOn test
 }
 
 build {
     dependsOn check
+}
+
+// Plugin publishing configuration
+pluginBundle {
+    website = 'https://github.com/KhulnaSoft/devlabs'
+    vcsUrl = 'https://github.com/KhulnaSoft/devlabs.git'
+    tags = ['coverage', 'ai', 'testing', 'gradle']
+
+    plugins {
+        coverageAiPlugin {
+            id = 'com.khulnasoft.plugin.coverage-ai'
+            displayName = 'Coverage AI Plugin'
+            description = 'AI-powered test coverage analysis and suggestions for Gradle projects'
+            tags = ['coverage-ai', 'code-quality', 'unit-testing']
+        }
+    }
+}
+
+// Publishing configuration
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            artifactId = 'coverage-ai-plugin'
+        }
+    }
+    repositories {
+        maven {
+            url = uri('https://oss.sonatype.org/service/local/staging/deploy/maven2/')
+            credentials {
+                username = project.findProperty('ossrhUsername') ?: System.getenv('OSSRH_USERNAME')
+                password = project.findProperty('ossrhPassword') ?: System.getenv('OSSRH_PASSWORD')
+            }
+        }
+    }
+}
+
+signing {
+    sign publishing.publications.mavenJava
 }
