--- a/intellij-projects/java-spring-refactor/gradle/wrapper/gradle-wrapper.properties
+++ b/intellij-projects/java-spring-refactor/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
+#Thu Oct 16 09:51:53 BDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
