fix: Upgrade workflow-cps to version 3993.v3e20a or later to resolve Dependabot alerts

--- a/devops-plugin/khulnasoft-devops-extend/pom.xml
+++ b/devops-plugin/khulnasoft-devops-extend/pom.xml
@@ -76,7 +76,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-cps</artifactId>
-      <version>2648.2651.v230593e03e9f</version>
+      <version>[3993.v3e20a,)</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
